fix: make `ExecutionCost` non-optional in result
This cost will always have a value, so no need to complicate the result
with an optional.
